src/compiler/syntactic/generated/ShexlParser.java
// Generated from C:/Users/Willy/Documents/github/thewilly/shex-lite/src/compiler/grammar\Shexl.g4 by ANTLR 4.8
package compiler.syntactic.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShexlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, PREFIX_KW=14, BASE_KW=15, IMPORT_KW=16, 
		START_KW=17, AND_KW=18, OR_KW=19, NOT_KW=20, IRI_KW=21, LITERAL_KW=22, 
		BNODE_KW=23, NON_LITERAL_KW=24, CLOSED_KW=25, A_KW=26, LABEL=27, ID=28, 
		IRI=29, INT_LITERAL=30, REAL_LITERAL=31, STRING_LITERAL=32, SKIP_=33;
	public static final int
		RULE_schema = 0, RULE_statement = 1, RULE_definition_statement = 2, RULE_base_definition = 3, 
		RULE_start_definition = 4, RULE_prefix_definition = 5, RULE_shape_definition = 6, 
		RULE_import_statement = 7, RULE_shape_name = 8, RULE_shape_invocation = 9, 
		RULE_constraint = 10, RULE_triple_constraint = 11, RULE_node_constraint = 12, 
		RULE_value_set_type = 13, RULE_cardinality = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"schema", "statement", "definition_statement", "base_definition", "start_definition", 
			"prefix_definition", "shape_definition", "import_statement", "shape_name", 
			"shape_invocation", "constraint", "triple_constraint", "node_constraint", 
			"value_set_type", "cardinality"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "':'", "'@'", "'{'", "'}'", "';'", "'.'", "'['", "']'", 
			"'*'", "'+'", "'?'", "','", "'PREFIX'", "'BASE'", "'IMPORT'", "'START'", 
			"'AND'", "'OR'", "'NOT'", "'IRI'", "'LITERAL'", "'BNODE'", "'NONLITERAL'", 
			"'CLOSED'", "'a'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "PREFIX_KW", "BASE_KW", "IMPORT_KW", "START_KW", "AND_KW", 
			"OR_KW", "NOT_KW", "IRI_KW", "LITERAL_KW", "BNODE_KW", "NON_LITERAL_KW", 
			"CLOSED_KW", "A_KW", "LABEL", "ID", "IRI", "INT_LITERAL", "REAL_LITERAL", 
			"STRING_LITERAL", "SKIP_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Shexl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShexlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SchemaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ShexlParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				statement();
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PREFIX_KW) | (1L << BASE_KW) | (1L << IMPORT_KW) | (1L << START_KW) | (1L << ID) | (1L << IRI))) != 0) );
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Definition_statementContext definition_statement() {
			return getRuleContext(Definition_statementContext.class,0);
		}
		public Import_statementContext import_statement() {
			return getRuleContext(Import_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(39);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PREFIX_KW:
			case BASE_KW:
			case START_KW:
			case ID:
			case IRI:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				definition_statement();
				}
				break;
			case IMPORT_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				import_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definition_statementContext extends ParserRuleContext {
		public Base_definitionContext base_definition() {
			return getRuleContext(Base_definitionContext.class,0);
		}
		public Start_definitionContext start_definition() {
			return getRuleContext(Start_definitionContext.class,0);
		}
		public Prefix_definitionContext prefix_definition() {
			return getRuleContext(Prefix_definitionContext.class,0);
		}
		public Shape_definitionContext shape_definition() {
			return getRuleContext(Shape_definitionContext.class,0);
		}
		public Definition_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterDefinition_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitDefinition_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitDefinition_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definition_statementContext definition_statement() throws RecognitionException {
		Definition_statementContext _localctx = new Definition_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition_statement);
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BASE_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				base_definition();
				}
				break;
			case START_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				start_definition();
				}
				break;
			case PREFIX_KW:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				prefix_definition();
				}
				break;
			case ID:
			case IRI:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				shape_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Base_definitionContext extends ParserRuleContext {
		public TerminalNode BASE_KW() { return getToken(ShexlParser.BASE_KW, 0); }
		public TerminalNode IRI() { return getToken(ShexlParser.IRI, 0); }
		public Base_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterBase_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitBase_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitBase_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Base_definitionContext base_definition() throws RecognitionException {
		Base_definitionContext _localctx = new Base_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_base_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(BASE_KW);
			setState(48);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_definitionContext extends ParserRuleContext {
		public TerminalNode START_KW() { return getToken(ShexlParser.START_KW, 0); }
		public Shape_invocationContext shape_invocation() {
			return getRuleContext(Shape_invocationContext.class,0);
		}
		public Start_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterStart_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitStart_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitStart_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_definitionContext start_definition() throws RecognitionException {
		Start_definitionContext _localctx = new Start_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_start_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(START_KW);
			setState(51);
			match(T__0);
			setState(52);
			shape_invocation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_definitionContext extends ParserRuleContext {
		public TerminalNode PREFIX_KW() { return getToken(ShexlParser.PREFIX_KW, 0); }
		public TerminalNode IRI() { return getToken(ShexlParser.IRI, 0); }
		public TerminalNode LABEL() { return getToken(ShexlParser.LABEL, 0); }
		public Prefix_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterPrefix_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitPrefix_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitPrefix_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prefix_definitionContext prefix_definition() throws RecognitionException {
		Prefix_definitionContext _localctx = new Prefix_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_prefix_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(PREFIX_KW);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL) {
				{
				setState(55);
				match(LABEL);
				}
			}

			setState(58);
			match(T__1);
			setState(59);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_definitionContext extends ParserRuleContext {
		public Shape_nameContext shape_name() {
			return getRuleContext(Shape_nameContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public Shape_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterShape_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitShape_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitShape_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Shape_definitionContext shape_definition() throws RecognitionException {
		Shape_definitionContext _localctx = new Shape_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shape_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			shape_name();
			setState(62);
			constraint();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_statementContext extends ParserRuleContext {
		public TerminalNode IMPORT_KW() { return getToken(ShexlParser.IMPORT_KW, 0); }
		public TerminalNode IRI() { return getToken(ShexlParser.IRI, 0); }
		public Import_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterImport_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitImport_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitImport_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_statementContext import_statement() throws RecognitionException {
		Import_statementContext _localctx = new Import_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_import_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(IMPORT_KW);
			setState(65);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ShexlParser.ID, 0); }
		public TerminalNode IRI() { return getToken(ShexlParser.IRI, 0); }
		public Shape_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterShape_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitShape_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitShape_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Shape_nameContext shape_name() throws RecognitionException {
		Shape_nameContext _localctx = new Shape_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_shape_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==IRI) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_invocationContext extends ParserRuleContext {
		public Shape_nameContext shape_name() {
			return getRuleContext(Shape_nameContext.class,0);
		}
		public Shape_invocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_invocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterShape_invocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitShape_invocation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitShape_invocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Shape_invocationContext shape_invocation() throws RecognitionException {
		Shape_invocationContext _localctx = new Shape_invocationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_shape_invocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__2);
			setState(70);
			shape_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public TerminalNode CLOSED_KW() { return getToken(ShexlParser.CLOSED_KW, 0); }
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public Node_constraintContext node_constraint() {
			return getRuleContext(Node_constraintContext.class,0);
		}
		public List<Triple_constraintContext> triple_constraint() {
			return getRuleContexts(Triple_constraintContext.class);
		}
		public Triple_constraintContext triple_constraint(int i) {
			return getRuleContext(Triple_constraintContext.class,i);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShexlListener ) ((ShexlListener)listener).exitConstraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ShexlVisitor ) return ((ShexlVisitor<? extends T>)visitor).visitConstraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constraint);
		try {
			int _alt;
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(CLOSED_KW);
				setState(73);
				constraint();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				node_constraint();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				match(T__3);
				setState(76);
				triple_constraint();
				setState(77);
				match(T__4);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				match(T__3);
				setState(83); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(80);
						triple_constraint();
						setState(81);
						match(T__5);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(85); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(87);
				triple_constraint();
				setState(88);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
